--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ APP_SECRET=1b2d7df356706559d3e788b9e6c6d50e
 
 ###> symfony/mailer ###
 ###> symfony/mailer ###
-MAILER_DSN=smtp://amal@amaltaycoaching.com:6Noa6mjMEUsG@mail.amaltaycoaching.com:465
+MAILER_DSN=
 ###< symfony/mailer ###
 ###< symfony/mailer ###
 
@@ -30,9 +30,7 @@ MAILER_DSN=smtp://amal@amaltaycoaching.com:6Noa6mjMEUsG@mail.amaltaycoaching.com
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 
-DATABASE_URL='mysql://amaltayc_samuel:ezBkHzNRJdkV26q@localhost:3306/amaltayc_amaltaycoaching?serverVersion=8.0.26'
-
-
+DATABASE_URL=
 
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
